deployments/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stg-manage-community-sentence-ui-service
spec:
  selector:
    app: stg-manage-community-sentence-ui # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 3000
